# ai-doctor-assitant

./: .env.example  Dockerfile  PATIENT_BOOKING_FIX.md  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
migrations/: env.py
migrations/versions/: 0001_initial.py  1251ca042114_init_models.py  19f0a07a223e_create_chat_messages_table.py  8c3dd8e28cc6_change_enums_struct.py  98359b615576_make_ai_consultation_fields_nullable.py  b0abef6fcc5f_add_status_field_to_ai_consultations.py  e41989e9ee62_doctor_model_add_new_fields.py  e7af71c395d8_add_time_stamp_mixin.py
src/app/: container.py  main.py  settings.py
src/domain/: constants.py  model_mixins.py
src/domain/entities/: ai_consultations.py  appointments.py  chat_messages.py  chat_sessions.py  doctors.py  medical_records.py  schedules.py  specializations.py  triage_candidates.py  triage_runs.py  users.py
src/domain/interfaces/: ai_consultation_repository.py  appointment_repository.py  chat_message_repository.py  chat_session_repository.py  doctor_repository.py  medical_record_repositories.py  schedule_repository.py  speicailization_repository.py  triage_candidate_repository.py  triage_run_repository.py  uow.py  user_repository.py
src/infrastructure/database/: core.py  redis.py
src/infrastructure/database/models/: __init__.py  ai_consultations.py  appointment.py  appointments.py  chat.py  doctors.py  (+10 more)
src/infrastructure/repositories/: ai_consultations.py  appointments.py  chat_messages.py  chat_sessions.py  doctors.py  medical_records.py  schedules.py  specializations.py  triage_candidates.py  triage_runs.py  users.py
src/infrastructure/services/: jwt_service.py  openai_service.py
src/infrastructure/utilities/: dto.py  model_mixins.py
src/presentation/: dependencies.py
src/use_cases/ai_consultations/: dto.py  use_case.py
src/use_cases/appointments/: dto.py  use_case.py
src/use_cases/chat/: dto.py  use_case.py
src/use_cases/doctors/: dto.py  use_case.py
src/use_cases/handlers/: ai_chat_handler.py
src/use_cases/medical_records/: dto.py  use_case.py
src/use_cases/schedules/: dto.py  use_case.py
src/use_cases/specializations/: dto.py  use_case.py
src/use_cases/stats/: dto.py  use_case.py
src/use_cases/triage/: dto.py  use_case.py
src/use_cases/users/: dto.py  use_case.py  users.py
tests/: conftest.py
tests/integration/: test_health.py
tests/unit/: test_jwt_service.py  test_password_service.py
(+29 files in other folders)
