[project]
name = "ai-doctor-assistant"
version = "0.1.0"
description = "AI-powered medical assistant backend"
authors = [
    {name = "dimash", email = "arystambekdimash005@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.123.5,<0.124.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "dependency-injector (>=4.48.2,<5.0.0)",
    "greenlet (>=3.3.0,<4.0.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "openai (>=2.9.0,<3.0.0)",
    "google-auth (>=2.47.0,<3.0.0)",
    "authlib (>=1.6.6,<2.0.0)",
    "itsdangerous (>=2.1.0,<3.0.0)"
]

[project.optional-dependencies]
dev = [
    "pytest (>=8.0.0,<9.0.0)",
    "pytest-asyncio (>=0.23.0,<1.0.0)",
    "pytest-cov (>=4.1.0,<5.0.0)",
    "httpx (>=0.27.0,<1.0.0)",
    "factory-boy (>=3.3.0,<4.0.0)",
    "faker (>=22.0.0,<23.0.0)",
    "aiosqlite (>=0.19.0,<1.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/__init__.py", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
